--- a/engelsk.html
+++ b/engelsk.html
@@ -15,7 +15,7 @@
              </div>
             </div>
     <div class="homeimg">
-      <img src="images/home.png" alt="a robot " width="300" height="300" />
+      <img src="home.png" alt="a robot " width="300" height="300" />
       <audio controls autoplay>
         <source src="videos/IMG_0398.MOV">
         
