--- a/gramatikk.html
+++ b/gramatikk.html
@@ -23,7 +23,7 @@
              </div>
             </div>
     <div class="homeimg">
-      <img  id= "image" src="images/home.png" alt="a robot " width="300" height="300" />
+      <img  id= "image" src="home.png" alt="a robot " width="300" height="300" />
       <audio controls autoplay>
         <source src="videos/IMG_0396.MOV">
     </audio>
