--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
 
     <div class="homeimg">
-      <img src="images/home.png" alt="a robot " width="500" height="500" />
+      <img src="home.png" alt="a robot " width="500" height="500" />
     </div>
   </body>
 </html>
