--- a/gramatikk.html
+++ b/gramatikk.html
@@ -25,7 +25,7 @@
     <div class="homeimg">
       <img  id= "image" src="home.png" alt="a robot " width="300" height="300" />
       <audio controls autoplay>
-        <source src="videos/IMG_0396.MOV">
+        <source src="IMG_0396.MOV">
     </audio>
       
         
