--- a/engelsk.html
+++ b/engelsk.html
@@ -17,7 +17,7 @@
     <div class="homeimg">
       <img src="home.png" alt="a robot " width="300" height="300" />
       <audio controls autoplay>
-        <source src="videos/IMG_0398.MOV">
+        <source src="IMG_0398.MOV">
         
       </audio>
         
